Use sentence case in Barroco miniweb titles

--- a/materials/presentaciones/barroco/actividades.html
+++ b/materials/presentaciones/barroco/actividades.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividades y Tareas - Barroco Español</title>
+    <title>Actividades y tareas - Barroco español</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -113,7 +113,7 @@
     <main class="main-content">
         <div class="container">
             <div class="content-card">
-                <h1>🎯 Actividades y Tareas del Barroco</h1>
+                <h1>🎯 Actividades y tareas del Barroco</h1>
 
                 <p>
                     Esta sección contiene <strong>actividades interactivas</strong> (1 hora) y <strong>tareas
@@ -121,7 +121,7 @@
                     a consolidar los conocimientos adquiridos sobre autores, estilos y obras.
                 </p>
 
-                <h2>📊 PARTE 1: Actividades Interactivas (1 hora)</h2>
+                <h2>📊 PARTE 1: Actividades interactivas (1 hora)</h2>
 
                 <!-- ACTIVIDAD 1: QUIZ -->
                 <div class="activity-box">
@@ -215,7 +215,7 @@
 
                 <!-- ACTIVIDAD 2: IDENTIFICAR ESTILOS -->
                 <div class="activity-box">
-                    <h3>Actividad 2: ¿Culteranismo o Conceptismo? (15 min)</h3>
+                    <h3>Actividad 2: ¿Culteranismo o conceptismo? (15 min)</h3>
                     <p><strong>Instrucciones</strong>: Lee cada fragmento e identifica si pertenece al <strong>culteranismo</strong> (Góngora) o al <strong>conceptismo</strong> (Quevedo).</p>
 
                     <div class="quiz-question" id="estilo1">
@@ -250,7 +250,7 @@
 
                 <!-- ACTIVIDAD 3: RELACIONAR AUTORES Y OBRAS -->
                 <div class="activity-box">
-                    <h3>Actividad 3: Relaciona Autores y Obras (10 min)</h3>
+                    <h3>Actividad 3: Relaciona autores y obras (10 min)</h3>
                     <p><strong>Instrucciones</strong>: Escribe el número de la obra junto al autor correcto.</p>
 
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem; margin: 1.5rem 0;">
@@ -284,7 +284,7 @@
 
                 <!-- ACTIVIDAD 4: ANÁLISIS DE FRAGMENTO -->
                 <div class="interactive-box">
-                    <h3>Actividad 4: Análisis de un Fragmento Barroco (20 min)</h3>
+                    <h3>Actividad 4: Análisis de un fragmento barroco (20 min)</h3>
                     <p><strong>Instrucciones</strong>: Lee el siguiente fragmento de <em>La vida es sueño</em> y responde las preguntas.</p>
 
                     <div style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; margin: 1rem 0; font-style: italic; border-left: 4px solid #8B5CF6;">
@@ -321,11 +321,11 @@
                     </div>
                 </div>
 
-                <h2>✏️ PARTE 2: Tareas Dinámicas para Clase (1 hora)</h2>
+                <h2>✏️ PARTE 2: Tareas dinámicas para clase (1 hora)</h2>
 
                 <!-- TAREA 1: DEBATE -->
                 <div class="task-box">
-                    <h3>Tarea 1: Debate Literario - Góngora vs. Quevedo (20 min)</h3>
+                    <h3>Tarea 1: Debate literario - Góngora vs. Quevedo (20 min)</h3>
                     <span class="timer">⏱️ 20 minutos</span>
 
                     <h4>🎯 Objetivo:</h4>
@@ -375,7 +375,7 @@
 
                 <!-- TAREA 2: TALLER DE ESCRITURA -->
                 <div class="task-box">
-                    <h3>Tarea 2: Taller de Escritura Barroca (20 min)</h3>
+                    <h3>Tarea 2: Taller de escritura barroca (20 min)</h3>
                     <span class="timer">⏱️ 20 minutos</span>
 
                     <h4>🎯 Objetivo:</h4>
@@ -445,7 +445,7 @@
 
                 <!-- TAREA 3: ANÁLISIS COMPARATIVO -->
                 <div class="task-box">
-                    <h3>Tarea 3: Mesa Redonda - El Teatro Barroco y el Cine Actual (20 min)</h3>
+                    <h3>Tarea 3: Mesa redonda - el teatro barroco y el cine actual (20 min)</h3>
                     <span class="timer">⏱️ 20 minutos</span>
 
                     <h4>🎯 Objetivo:</h4>
@@ -477,7 +477,7 @@
                     <button class="btn" onclick="saveMesa()">💾 Guardar Conclusiones</button>
                 </div>
 
-                <h2>📥 Exportar Resultados</h2>
+                <h2>📥 Exportar resultados</h2>
                 <div style="background: linear-gradient(135deg, rgba(67, 172, 232, 0.1), rgba(67, 172, 232, 0.05)); border-radius: 12px; padding: 2rem; text-align: center;">
                     <p>Una vez completadas las actividades, puedes descargar un resumen de tus respuestas:</p>
                     <button class="btn" onclick="exportResults()" style="font-size: 1.1rem; padding: 1rem 2rem;">📄 Descargar Resumen de Actividades</button>
