--- a/materials/presentaciones/barroco/autores.html
+++ b/materials/presentaciones/barroco/autores.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autores Principales - Barroco Español</title>
+    <title>Autores principales - Barroco español</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -248,7 +248,7 @@
                         <li><strong>Ruptura lingüística</strong>: Sintaxis latinizante, metáforas audaces, léxico culto</li>
                     </ul>
 
-                    <h3>Estilo: El Culteranismo</h3>
+                    <h3>Estilo: el culteranismo</h3>
                     <ul>
                         <li><strong>Belleza de la forma</strong>: Importa más cómo se dice que qué se dice</li>
                         <li><strong>Latinismos</strong>: Cultismos léxicos (<em>purpúreo, cándido, espléndido</em>)</li>
@@ -296,7 +296,7 @@
                         <li><strong>Prosa filosófica</strong>: <em>La cuna y la sepultura</em>, tratados morales</li>
                     </ul>
 
-                    <h3>Estilo: El Conceptismo</h3>
+                    <h3>Estilo: el conceptismo</h3>
                     <ul>
                         <li><strong>Agudeza de pensamiento</strong>: Importa el ingenio, la idea sorprendente</li>
                         <li><strong>Juegos de palabras</strong>: Polisemia, dilogías, paradojas, antítesis</li>
@@ -317,7 +317,7 @@
                 </div>
 
                 <!-- COMPARACIÓN -->
-                <h2>⚖️ Comparación: Dos Pares Opuestos</h2>
+                <h2>⚖️ Comparación: dos pares opuestos</h2>
 
                 <h3>Teatro: Lope vs. Calderón</h3>
                 <ul>
