--- a/materials/presentaciones/barroco/contexto.html
+++ b/materials/presentaciones/barroco/contexto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contexto Histórico - Barroco Español</title>
+    <title>Contexto histórico - Barroco español</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <style>
         * {
@@ -291,7 +291,7 @@
     <main class="main-content">
         <div class="container">
             <div class="content-card">
-                <h1>🏛️ Contexto Histórico del Barroco</h1>
+                <h1>🏛️ Contexto histórico del Barroco</h1>
 
                 <p>
                     El <strong>Barroco español</strong> (siglo XVII) es una época de profundas contradicciones:
@@ -300,9 +300,9 @@
                     <strong>Siglo de Oro</strong> de la literatura española.
                 </p>
 
-                <h2>🌍 La Crisis del Siglo XVII</h2>
+                <h2>🌍 La crisis del siglo XVII</h2>
 
-                <h3>Crisis Política y Militar</h3>
+                <h3>Crisis política y militar</h3>
                 <ul>
                     <li><strong>Decadencia del Imperio</strong>: Tras el esplendor del siglo XVI bajo Carlos V y Felipe II, España comienza a perder hegemonía en Europa</li>
                     <li><strong>Guerra de los Treinta Años (1618-1648)</strong>: Conflicto devastador que termina con la Paz de Westfalia y el fin del predominio español</li>
@@ -310,7 +310,7 @@
                     <li><strong>Validos débiles</strong>: Reinados de Felipe III, Felipe IV y Carlos II marcados por privados como el Duque de Lerma y el Conde-Duque de Olivares</li>
                 </ul>
 
-                <h3>Crisis Económica y Social</h3>
+                <h3>Crisis económica y social</h3>
                 <ul>
                     <li><strong>Bancarrotas sucesivas</strong>: La Corona declara varias suspensiones de pagos</li>
                     <li><strong>Inflación y devaluación</strong>: El oro y la plata de América provocan inflación; manipulación de la moneda</li>
@@ -327,7 +327,7 @@
                     </p>
                 </div>
 
-                <h2>👑 El Absolutismo Monárquico</h2>
+                <h2>👑 El absolutismo monárquico</h2>
 
                 <p>
                     El siglo XVII consolida el <strong>poder absoluto del rey</strong>, presentado como representante
@@ -349,7 +349,7 @@
                     <li><strong>Arte al servicio de la fe</strong>: Pintura, escultura y teatro como propaganda religiosa</li>
                 </ul>
 
-                <h2>📅 Cronología Clave del Barroco</h2>
+                <h2>📅 Cronología clave del Barroco</h2>
 
                 <div class="timeline">
                     <div class="timeline-item">
@@ -390,7 +390,7 @@
                     </div>
                 </div>
 
-                <h2>🎨 Mentalidad Barroca</h2>
+                <h2>🎨 Mentalidad barroca</h2>
 
                 <p>
                     La crisis del siglo XVII genera una <strong>mentalidad pesimista y desengañada</strong>,
