--- a/materials/presentaciones/barroco/estilos.html
+++ b/materials/presentaciones/barroco/estilos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estilos Literarios - Barroco Español</title>
+    <title>Estilos literarios - Barroco español</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -86,7 +86,7 @@
     <main class="main-content">
         <div class="container">
             <div class="content-card">
-                <h1>🖋️ Culteranismo y Conceptismo</h1>
+                <h1>🖋️ Culteranismo y conceptismo</h1>
 
                 <p>
                     El <strong>Barroco</strong> se caracteriza por la <strong>complejidad</strong> y el <strong>artificio</strong>.
@@ -95,7 +95,7 @@
                     el <strong>culteranismo</strong> (belleza de la forma) y el <strong>conceptismo</strong> (agudeza del pensamiento).
                 </p>
 
-                <h2>🎨 Comparación: Dos Caminos hacia la Complejidad</h2>
+                <h2>🎨 Comparación: dos caminos hacia la complejidad</h2>
 
                 <div class="comparison-box">
                     <div class="culteranismo-box">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
 
-                <h2>🌺 El Culteranismo (Gongorismo)</h2>
+                <h2>🌺 El culteranismo (gongorismo)</h2>
 
                 <p>
                     El <strong>culteranismo</strong>, también llamado <strong>gongorismo</strong> por su máximo
@@ -131,7 +131,7 @@
                     dirigida a una élite culta capaz de descifrar sus complejidades.
                 </p>
 
-                <h3>Características del Culteranismo</h3>
+                <h3>Características del culteranismo</h3>
 
                 <ul>
                     <li><strong>Cultismos léxicos</strong>: Uso de palabras procedentes del latín o el griego (<em>cándido, purpúreo, refulgente, émulo</em>)</li>
@@ -142,7 +142,7 @@
                     <li><strong>Adjetivación ornamental</strong>: Abundancia de adjetivos cultos que embellecen el verso</li>
                 </ul>
 
-                <h3>Recursos Estilísticos</h3>
+                <h3>Recursos estilísticos</h3>
 
                 <ul>
                     <li><strong>Perífrasis</strong>: "el mentido robador de Europa" = el toro (Zeus disfrazado)</li>
@@ -171,14 +171,14 @@
                     </ul>
                 </div>
 
-                <h3>Luis de Góngora: El Príncipe de las Tinieblas</h3>
+                <h3>Luis de Góngora: el príncipe de las tinieblas</h3>
                 <p>
                     Góngora fue criticado por sus contemporáneos (especialmente Quevedo) por hacer una poesía
                     <strong>"oscura"</strong> e incomprensible. Pero Góngora defendía que la dificultad era un mérito:
                     el lector debía esforzarse, y <strong>"entender es premiar"</strong>.
                 </p>
 
-                <h2>💡 El Conceptismo</h2>
+                <h2>💡 El conceptismo</h2>
 
                 <p>
                     El <strong>conceptismo</strong>, cuyo máximo exponente es <strong>Francisco de Quevedo</strong>,
@@ -186,7 +186,7 @@
                     la idea ingeniosa, la asociación sorprendente. El conceptismo es económico: dice mucho con pocas palabras.
                 </p>
 
-                <h3>Características del Conceptismo</h3>
+                <h3>Características del conceptismo</h3>
 
                 <ul>
                     <li><strong>Concisión</strong>: Máximo contenido en mínimas palabras</li>
@@ -197,7 +197,7 @@
                     <li><strong>Sentencias y aforismos</strong>: Frases densas de significado moral o filosófico</li>
                 </ul>
 
-                <h3>Recursos Estilísticos</h3>
+                <h3>Recursos estilísticos</h3>
 
                 <ul>
                     <li><strong>Polisemia</strong>: Una palabra con varios significados simultáneos</li>
@@ -242,14 +242,14 @@
                     </ul>
                 </div>
 
-                <h3>Francisco de Quevedo: El Maestro de la Agudeza</h3>
+                <h3>Francisco de Quevedo: el maestro de la agudeza</h3>
                 <p>
                     Quevedo domina todos los tonos: desde la <strong>sátira más feroz</strong> hasta la
                     <strong>reflexión metafísica más profunda</strong>. Su ingenio es mordaz, su crítica despiadada,
                     pero también es capaz de la poesía amorosa y moral más honda.
                 </p>
 
-                <h2>⚖️ Culteranismo vs. Conceptismo: ¿Oposición o Complemento?</h2>
+                <h2>⚖️ Culteranismo vs. conceptismo: ¿oposición o complemento?</h2>
 
                 <p>
                     Aunque se presentan como estilos opuestos, en realidad <strong>comparten el mismo objetivo</strong>:
@@ -279,7 +279,7 @@
                     </div>
                 </div>
 
-                <h2>🎭 La Rivalidad Góngora-Quevedo</h2>
+                <h2>🎭 La rivalidad Góngora-Quevedo</h2>
 
                 <p>
                     La oposición entre culteranismo y conceptismo se personificó en la <strong>enemistad legendaria</strong>
@@ -299,7 +299,7 @@
                     <em>(Alusión antisemita: untaba con tocino para que Góngora, de origen converso, no las tocase)</em>
                 </div>
 
-                <h2>🌟 Legado de los Estilos Barrocos</h2>
+                <h2>🌟 Legado de los estilos barrocos</h2>
 
                 <p>
                     Tanto el culteranismo como el conceptismo llevaron la lengua española a <strong>límites expresivos
