--- a/materials/presentaciones/barroco/index.html
+++ b/materials/presentaciones/barroco/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Barroco Español - Portal Educativo</title>
+    <title>El Barroco español - portal educativo</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <style>
         * {
@@ -597,7 +597,7 @@
             <section class="hero">
                 <div class="hero-content">
                     <div class="hero-badge">🎭 Siglo XVII · Siglo de Oro</div>
-                    <h2 class="hero-title">El Barroco Español</h2>
+                    <h2 class="hero-title">El Barroco español</h2>
                     <p class="hero-description">
                         Una época de <span class="highlight-text">contrastes extremos y genios literarios</span>.
                         Crisis política, esplendor artístico y el nacimiento del teatro como industria cultural.
