--- a/materials/presentaciones/barroco/obras.html
+++ b/materials/presentaciones/barroco/obras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Obras Fundamentales - Barroco Español</title>
+    <title>Obras fundamentales - Barroco español</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -83,7 +83,7 @@
     <main class="main-content">
         <div class="container">
             <div class="content-card">
-                <h1>📚 Obras Fundamentales del Barroco</h1>
+                <h1>📚 Obras fundamentales del Barroco</h1>
 
                 <p>
                     El Barroco español produjo algunas de las <strong>obras más importantes de la literatura
