--- a/materials/presentaciones/barroco/teatro.html
+++ b/materials/presentaciones/barroco/teatro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teatro como Industria - Barroco Español</title>
+    <title>Teatro como industria - Barroco español</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -79,7 +79,7 @@
     <main class="main-content">
         <div class="container">
             <div class="content-card">
-                <h1>🎭 El Teatro como Industria Cultural</h1>
+                <h1>🎭 El teatro como industria cultural</h1>
 
                 <p>
                     El <strong>teatro barroco español</strong> no es solo un género literario: es un fenómeno de
@@ -88,14 +88,14 @@
                     entretenimiento urbano</strong>.
                 </p>
 
-                <h2>🏛️ Los Corrales de Comedias</h2>
+                <h2>🏛️ Los corrales de comedias</h2>
 
                 <p>
                     Los <strong>corrales</strong> eran patios interiores de casas o manzanas de edificios adaptados
                     para representaciones teatrales. Se construyeron en todas las ciudades importantes de España.
                 </p>
 
-                <h3>Estructura de un Corral</h3>
+                <h3>Estructura de un corral</h3>
                 <ul>
                     <li><strong>Patio</strong>: Espacio central al aire libre donde se colocaba el público masculino de pie (los <em>mosqueteros</em>)</li>
                     <li><strong>Tablado</strong>: Escenario elevado al fondo del patio, sin cortina</li>
@@ -106,7 +106,7 @@
                 </ul>
 
                 <div class="teatro-diagram">
-                    <h3 style="margin-top: 0; color: #8B5CF6;">📐 Plano del Corral</h3>
+                    <h3 style="margin-top: 0; color: #8B5CF6;">📐 Plano del corral</h3>
                     <pre style="font-size: 0.9rem; text-align: left; line-height: 1.6; color: #555;">
 ╔════════════════════════════════════════╗
 ║         TERTULIA (arriba)              ║
@@ -122,7 +122,7 @@
                     </pre>
                 </div>
 
-                <h3>Condiciones del Espectáculo</h3>
+                <h3>Condiciones del espectáculo</h3>
                 <ul>
                     <li><strong>Sin iluminación artificial</strong>: Las funciones eran por la tarde, con luz natural</li>
                     <li><strong>Sin decorados complejos</strong>: Se usaban cortinas, algunos muebles y pocos elementos escenográficos</li>
@@ -130,7 +130,7 @@
                     <li><strong>Vestuario rico</strong>: Los actores invertían en trajes lujosos para atraer al público</li>
                 </ul>
 
-                <h2>👥 El Público: Una Sociedad en Miniatura</h2>
+                <h2>👥 El público: una sociedad en miniatura</h2>
 
                 <p>
                     Los corrales reunían a <strong>todos los estamentos sociales</strong>: nobles en los aposentos,
@@ -138,7 +138,7 @@
                     clérigos en la tertulia. El teatro era un <strong>espejo de la sociedad</strong>.
                 </p>
 
-                <h3>El Poder de los Mosqueteros</h3>
+                <h3>El poder de los mosqueteros</h3>
                 <p>
                     Los <strong>mosqueteros</strong> (público popular de pie en el patio) eran temidos por autores y
                     actores. Su reacción decidía el éxito o fracaso de una obra:
@@ -150,7 +150,7 @@
                 </ul>
 
                 <div class="highlight-box">
-                    <h3>💡 El Teatro como Democracia Cultural</h3>
+                    <h3>💡 El teatro como democracia cultural</h3>
                     <p style="margin-bottom: 0;">
                         Por primera vez, el <strong>gusto popular</strong> decide el éxito cultural. Los nobles podían
                         tener sus preferencias, pero si los mosqueteros silbaban, la obra fracasaba. Este fenómeno
@@ -158,14 +158,14 @@
                     </p>
                 </div>
 
-                <h2>💰 El Teatro como Negocio</h2>
+                <h2>💰 El teatro como negocio</h2>
 
                 <p>
                     El teatro barroco era una <strong>industria rentable</strong> que movía mucho dinero y empleaba
                     a cientos de profesionales.
                 </p>
 
-                <h3>Agentes Económicos</h3>
+                <h3>Agentes económicos</h3>
                 <ul>
                     <li><strong>Autores de comedias</strong>: Empresarios que compraban obras, contrataban actores y organizaban giras</li>
                     <li><strong>Dramaturgos</strong>: Vendían sus obras a los autores de comedias por un precio fijo</li>
@@ -174,7 +174,7 @@
                     <li><strong>Ayuntamientos</strong>: Otorgaban licencias y supervisaban el orden público</li>
                 </ul>
 
-                <h3>Producción en Masa: El Caso de Lope</h3>
+                <h3>Producción en masa: el caso de Lope</h3>
                 <p>
                     <strong>Lope de Vega</strong> es el paradigma del autor-industria. Escribió unas <strong>1.800 comedias</strong>
                     (según él mismo), lo que implica:
@@ -186,14 +186,14 @@
                     <li><strong>Éxito comercial</strong>: Lope ganaba bien, aunque se quejaba de que los editores pirateaban sus textos</li>
                 </ul>
 
-                <h2>📜 La Comedia Nueva: Fórmula de Éxito</h2>
+                <h2>📜 La comedia nueva: fórmula de éxito</h2>
 
                 <p>
                     Lope de Vega revolucionó el teatro español con el <strong><em>Arte nuevo de hacer comedias</em></strong>
                     (1609), donde justificaba su ruptura con las reglas clásicas para satisfacer al público.
                 </p>
 
-                <h3>Características de la Comedia Nueva</h3>
+                <h3>Características de la comedia nueva</h3>
                 <ul>
                     <li><strong>3 actos (jornadas)</strong>: En lugar de los 5 actos clásicos (planteamiento, nudo, desenlace)</li>
                     <li><strong>Ruptura de las tres unidades clásicas</strong>:
@@ -209,36 +209,36 @@
                     <li><strong>Decoro poético</strong>: Cada personaje habla según su rango social</li>
                 </ul>
 
-                <h2>🎨 Temas del Teatro Barroco</h2>
+                <h2>🎨 Temas del teatro barroco</h2>
 
-                <h3>1. Dramas de Honor</h3>
+                <h3>1. Dramas de honor</h3>
                 <ul>
                     <li><strong>El honor</strong>: Valor supremo del noble; manchado por la deshonra de la esposa</li>
                     <li><strong>Venganza</strong>: El marido debe lavar la afrenta con sangre</li>
                     <li><strong>Ejemplos</strong>: <em>El alcalde de Zalamea</em> (Calderón), <em>Peribáñez</em> (Lope)</li>
                 </ul>
 
-                <h3>2. Comedias de Capa y Espada</h3>
+                <h3>2. Comedias de capa y espada</h3>
                 <ul>
                     <li><strong>Enredos amorosos</strong>: Galanes, damas, celos, confusiones nocturnas</li>
                     <li><strong>Ambiente urbano</strong>: Madrid, Sevilla; casas con jardines, tapadas, tercerías</li>
                     <li><strong>Ejemplos</strong>: <em>La dama duende</em> (Calderón), <em>El perro del hortelano</em> (Lope)</li>
                 </ul>
 
-                <h3>3. Dramas Históricos y Legendarios</h3>
+                <h3>3. Dramas históricos y legendarios</h3>
                 <ul>
                     <li><strong>Historias nacionales</strong>: Reyes, héroes, episodios de la Reconquista</li>
                     <li><strong>Ejemplos</strong>: <em>Fuenteovejuna</em> (Lope), <em>El caballero de Olmedo</em> (Lope)</li>
                 </ul>
 
-                <h3>4. Autos Sacramentales</h3>
+                <h3>4. Autos sacramentales</h3>
                 <ul>
                     <li><strong>Teatro religioso</strong>: Alegorías sobre el misterio de la Eucaristía</li>
                     <li><strong>Representados en Corpus</strong>: Con carros escenográficos en calles y plazas</li>
                     <li><strong>Maestro</strong>: Calderón de la Barca (<em>El gran teatro del mundo</em>)</li>
                 </ul>
 
-                <h2>🌟 Legado del Teatro Barroco</h2>
+                <h2>🌟 Legado del teatro barroco</h2>
 
                 <p>
                     El teatro del Siglo de Oro español fue un fenómeno cultural sin precedentes:
@@ -251,7 +251,7 @@
                 </ul>
 
                 <div class="highlight-box">
-                    <h3>🎬 Paralelo con el Cine Actual</h3>
+                    <h3>🎬 Paralelo con el cine actual</h3>
                     <p style="margin-bottom: 0;">
                         El teatro barroco fue el <strong>cine de su época</strong>: espectáculo de masas, industria
                         rentable, fábrica de sueños y evasión. Lope de Vega es comparable a un director de Hollywood
