Update card link to redirect to external site

--- a/materials/presentaciones/barroco/index.html
+++ b/materials/presentaciones/barroco/index.html
@@ -670,7 +670,7 @@
                         </p>
                     </div>
 
-                    <div class="card" onclick="location.href='../../index.html#barroco'">
+                    <div class="card" onclick="location.href=https://elcorreveidile.github.io/Literatura/">
                         <div class="card-icon">🏠</div>
                         <h4 class="card-title">Volver al portal</h4>
                         <p class="card-description">
