Update activities description in actividades.html
Removed time estimates from the activities description.

--- a/materials/presentaciones/barroco/actividades.html
+++ b/materials/presentaciones/barroco/actividades.html
@@ -116,8 +116,8 @@
                 <h1>🎯 Actividades y tareas del Barroco</h1>
 
                 <p>
-                    Esta sección contiene <strong>actividades interactivas</strong> (1 hora) y <strong>tareas
-                    dinámicas para clase</strong> (1 hora) sobre el Barroco español. Las actividades te ayudarán
+                    Esta sección contiene <strong>actividades interactivas</strong> y <strong>tareas
+                    dinámicas para clase</strong> sobre el Barroco español. Las actividades te ayudarán
                     a consolidar los conocimientos adquiridos sobre autores, estilos y obras.
                 </p>
 
