Remove time duration from activity headings

--- a/materials/presentaciones/barroco/actividades.html
+++ b/materials/presentaciones/barroco/actividades.html
@@ -121,11 +121,11 @@
                     a consolidar los conocimientos adquiridos sobre autores, estilos y obras.
                 </p>
 
-                <h2>📊 PARTE 1: Actividades interactivas (1 hora)</h2>
+                <h2>📊 PARTE 1: Actividades interactivas</h2>
 
                 <!-- ACTIVIDAD 1: QUIZ -->
                 <div class="activity-box">
-                    <h3>Actividad 1: Quiz del Barroco (15 min)</h3>
+                    <h3>Actividad 1: Quiz del Barroco</h3>
                     <p><strong>Instrucciones</strong>: Lee cada pregunta y selecciona la respuesta correcta. Al final, comprueba tus resultados.</p>
 
                     <div class="quiz-question" id="q1">
@@ -215,7 +215,7 @@
 
                 <!-- ACTIVIDAD 2: IDENTIFICAR ESTILOS -->
                 <div class="activity-box">
-                    <h3>Actividad 2: ¿Culteranismo o conceptismo? (15 min)</h3>
+                    <h3>Actividad 2: ¿Culteranismo o conceptismo?</h3>
                     <p><strong>Instrucciones</strong>: Lee cada fragmento e identifica si pertenece al <strong>culteranismo</strong> (Góngora) o al <strong>conceptismo</strong> (Quevedo).</p>
 
                     <div class="quiz-question" id="estilo1">
@@ -250,7 +250,7 @@
 
                 <!-- ACTIVIDAD 3: RELACIONAR AUTORES Y OBRAS -->
                 <div class="activity-box">
-                    <h3>Actividad 3: Relaciona autores y obras (10 min)</h3>
+                    <h3>Actividad 3: Relaciona autores y obras</h3>
                     <p><strong>Instrucciones</strong>: Escribe el número de la obra junto al autor correcto.</p>
 
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem; margin: 1.5rem 0;">
