Add review section for exam preparation

--- a/index.html
+++ b/index.html
@@ -146,6 +146,22 @@
     </div>
   </section>
 
+  <!-- REPASO -->
+  <section class="section" id="repaso">
+    <div class="container">
+      <h2>🧠 Repaso para el examen</h2>
+      <div class="card">
+        <p class="hint">Pulsa cada tarjeta para revelar la respuesta. Puedes barajar el orden cuando quieras.</p>
+        <div class="flash-controls">
+          <button class="btn" id="shuffleCards">🔀 Barajar</button>
+          <button class="btn" id="resetCards">↩️ Volver al orden original</button>
+          <span class="muted" id="flashMeta"></span>
+        </div>
+        <div class="flash-grid" id="flashcards"></div>
+      </div>
+    </div>
+  </section>
+
   <!-- EDAD MEDIA -->
   <section class="section" id="edad-media">
     <div class="container">
