Add buttons for PDF presentation access

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
       <h2>🧠 Repaso para el examen</h2>
       <div class="card">
         <p class="hint">Pulsa cada tarjeta para revelar la respuesta. Puedes barajar el orden cuando quieras.</p>
+        <div style="margin:0 0 1rem 0;display:flex;gap:.5rem;flex-wrap:wrap">
+          <button class="btn primary" data-pdf="materials/presentaciones/repaso.pdf">📑 Ver presentación de repaso (PDF)</button>
+          <a class="btn" href="materials/presentaciones/repaso.pdf" target="_blank" rel="noopener">↗️ Abrir en pestaña nueva</a>
+        </div>
         <div class="flash-controls">
           <button class="btn" id="shuffleCards">🔀 Barajar</button>
           <button class="btn" id="resetCards">↩️ Volver al orden original</button>
